force-app/main/default/objects/ECM_Record_Matching_Configuration__c/ECM_Record_Matching_Configuration__c.object-meta.xml
<CustomObject>
    <description>ECMV2.1 Record Matching configuration used to control Job Matching functionality for Job Orders.</description>
    <label>ECM Record Matching Configuration</label>
    <nameField>
        <displayFormat>ECMRecMatchConfig-{0000}</displayFormat>
        <label>ECM Record Matching Config #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECM Record Matching Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>