force-app/main/default/objects/ECM_Record_Matching_Configuration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>ECMv2.1</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>