force-app/main/default/objects/ECM_Record_Matching_Configuration__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>ECMv2.1</description>
    <label>Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>