force-app/main/default/objects/ECM_Record_Matching_Configuration__c/fields/Max_Results__c.field-meta.xml
<CustomField>
    <fullName>Max_Results__c</fullName>
    <defaultValue>200</defaultValue>
    <description>ECMv2.1</description>
    <inlineHelpText>The maximum number of results that can be returned from a Find. When the maximum is exceeded a message is displayed to the user informing them to narrow their criteria. The default is 200.</inlineHelpText>
    <label>Max Results</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>