force-app/main/default/objects/ECM_Record_Matching_Configuration__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>ECMv2.1 Job_Order__c is only supported object.</description>
    <inlineHelpText>The source object used for matching.</inlineHelpText>
    <label>Source Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job_Order__c</fullName>
                <default>true</default>
                <label>Job_Order__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>