force-app/main/default/objects/ECM_Record_Matching_Configuration__c/fields/Source_Object_Field_Set_API_Name_Two__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Field_Set_API_Name_Two__c</fullName>
    <description>ECMv2.1</description>
    <inlineHelpText>The API Name of the field set for the second section of the search page.</inlineHelpText>
    <label>Source Object Field Set Two API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>