force-app/main/default/objects/ECM_Record_Matching_Configuration__c/fields/Source_Object_Field_Set_One_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Field_Set_One_API_Name__c</fullName>
    <description>ECMv2.1</description>
    <inlineHelpText>The API Name for the field set for the first section of the search page.</inlineHelpText>
    <label>Source Object Field Set One API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>