force-app/main/default/objects/ECM_Record_Matching_Configuration__c/fields/Target_Field_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Set_API_Name__c</fullName>
    <description>ECMv2.1</description>
    <inlineHelpText>The field set API Name used for the two result tables in the search page.</inlineHelpText>
    <label>Target Field Set API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>