force-app/main/default/objects/ECM_Record_Matching_Configuration__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>ECMv2.1 Case_Record__c is only supported object.</description>
    <inlineHelpText>The target object to be matched to the source.</inlineHelpText>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case_Record__c</fullName>
                <default>true</default>
                <label>Case_Record__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>